                     Visual Servoing Platform
                     Resume of the change log

     Copyright Projet Lagadic / IRISA-INRIA Rennes, 2005-2013
                    http://www.irisa.fr/lagadic


ViSP under development version
  - New features
    . Introduction of a new template tracker.
  - Improvements
    . Add missing const to member functions and arguments passed by reference.
  - Examples
  - Bug fixed
    . [16263] libopencv_nonfree for Surf not detected by CMake.
    . [16307] vpVideoReader::setLastFrameIndex() doesn't work.
    . [16371] No convergence in SVDcmp
    . [16465] FTBFS on armhf, ppc, s390: Errors while running CTest
----------------------------------------------
ViSP 2.8.0 (released July 24th, 2013)
  - New features
    . New camera calibration tool: example/camera_calibration.cpp
  - Improvements
    . vpV4l2Grabber and vp1394CMUGrabber does no more require a call to
      open(I).
    . In vp1394CMUGrabber new getters/setters for the framerate, shutter, gain.
      It is now possible to change the settings in the acquisition loop.
    . An exceptions is throwned when moving-edges are not initialized
      (vpMeTracker, vpMeLine, vpMeEllipse)
    . In model-based trackers, improve face visibility test using Ogre ray
      tracing when faces are concave or not oriented counter clockwise.
    . Still in model-based trackers, add functionalities to use clipping planes.
    . ViSP can now be used with pkg-config
    . New fonctions in vp1394TwoGrabber to turn auto shutter and auto gain
      on. Also new getter for auto shutter and auto gain min/max values.
    . Support Visual Studio 2012 (MSVC11)
    . Introduce C++ visibility support as described here
      http://gcc.gnu.org/wiki/Visibility
    . Better support of image formats: *.tiff, *.jpeg, *.bmp, *.pbm, ...
  - Examples
    . Introduction of tutorials as minimalist line by line illustrated examples.
  - Bug fixed